starting on postgresql_conf template

--- a/templates/postgresql_conf.erb
+++ b/templates/postgresql_conf.erb
@@ -30,6 +30,8 @@
 #                TB = terabytes                     h   = hours
 #                                                   d   = days
 
+### Chef Ohai memory is reported at: <%= @config[:memory] %>
+
 
 #------------------------------------------------------------------------------
 # FILE LOCATIONS
