--- a/templates/recovery_conf.erb
+++ b/templates/recovery_conf.erb
@@ -1,2 +1,2 @@
 standby_mode = 'on'
-primary_conninfo = 'host=192.168.0.1 user=repuser'
+primary_conninfo = 'user=<%= @config[:repl][:username] %> password=<%= @config[:repl][:password] %> host=<%= @config[:repl][:hostname] %> port=5432 sslmode=prefer sslcompression=1 krbsrvname=postgres'
