--- a/templates/recovery_conf.erb
+++ b/templates/recovery_conf.erb
@@ -1,2 +1,2 @@
 standby_mode = <% if @config[:standby] == "hot_standby" %>'on'<% else %>'off'<% end %>
-primary_conninfo = 'user=<%= @config[:username] %> password=<%= @config[:password] %> host=<%= @config[:hostname] %> port=5432 sslmode=prefer sslcompression=1 krbsrvname=postgres'
+primary_conninfo = 'application_name=s1 user=<%= @config[:username] %> password=<%= @config[:password] %> host=<%= @config[:hostname] %> port=5432 sslmode=prefer sslcompression=1 krbsrvname=postgres'
