synchronous_standby_names when set, seems to be making chef hang

--- a/templates/postgresql_conf.erb
+++ b/templates/postgresql_conf.erb
@@ -271,7 +271,7 @@ wal_keep_segments = <%= @config[:optimization][:wal_keep_segments] %>
 # - Master Server -
 
 # These settings are ignored on a standby server.
-synchronous_standby_names = 's1'
+# synchronous_standby_names = 's1'
 
 #synchronous_standby_names = '' # standby servers that provide sync rep
                                 # number of sync standbys and comma-separated list of application_name
