--- a/templates/postgresql_conf.erb
+++ b/templates/postgresql_conf.erb
@@ -177,7 +177,8 @@ dynamic_shared_memory_type = posix      # the default is the first option
 # - Settings -
 
 <% if @config[:repl][:pg_node] == "master" && %w(warm_standby hot_standby).include?(@config[:repl][:cluster_type]) %>
-wal_level = replica
+# wal_level = replica
+wal_level = logical
 <% end %>
 
 #wal_level = minimal                    # minimal, replica, or logical
