--- a/templates/postgresql_conf.erb
+++ b/templates/postgresql_conf.erb
@@ -250,22 +250,19 @@ archive_command = 'cd .'
 # Set these on the master and on any standby that will send replication data.
 
 <% if @config[:repl][:pg_node] == "master" && %w(warm_standby hot_standby).include?(@config[:repl][:cluster_type]) %>
-max_wal_senders = 4  # number of nodes + 2 (for possible reconnection attempts)
+max_wal_senders = 4          # number of nodes + 2 (for possible reconnection attempts)
+max_replication_slots = 4    # max number of replication slots
 <% end %>
 
-#max_wal_senders = 0            # max number of walsender processes
-                                # (change requires restart)
 #wal_keep_segments = 0          # in logfile segments, 16MB each; 0 disables
 
 <% if @config[:repl][:pg_node] == "master" && %w(warm_standby hot_standby).include?(@config[:repl][:cluster_type]) %>
-wal_keep_segments = <%= @config[:optimization][:wal_keep_segments] %> 
+# May remove this in favor of replication slots
+wal_keep_segments = <%= @config[:optimization][:wal_keep_segments] %> # in logfile segments, 16MB each; 0 disables
 <% end %>
-
 
 #wal_sender_timeout = 60s       # in milliseconds; 0 disables
 
-#max_replication_slots = 0      # max number of replication slots
-                                # (change requires restart)
 #track_commit_timestamp = off   # collect timestamp of transaction commit
                                 # (change requires restart)
 
