--- a/templates/postgresql_conf.erb
+++ b/templates/postgresql_conf.erb
@@ -33,6 +33,12 @@
 # Chef Ohai reported memory as: <%= @config[:optimization][:memory] %> MB.
 
 #------------------------------------------------------------------------------
+# MODULES
+#------------------------------------------------------------------------------
+
+shared_preload_libraries = 'decoderbufs'
+
+#------------------------------------------------------------------------------
 # FILE LOCATIONS
 #------------------------------------------------------------------------------
 
