--- a/templates/postgresql_conf.erb
+++ b/templates/postgresql_conf.erb
@@ -378,7 +378,7 @@ logging_collector = on ### default off  # Enable capturing of stderr and csvlog
                                         # (change requires restart)
 
 # These are only used if logging_collector is on:
-log_directory = '/var/log/pg_log'   ### default: 'pg_log' # directory where log files are written,
+log_directory = '/var/log/postgresql'   ### default: 'pg_log' # directory where log files are written,
                                         # can be absolute or relative to PGDATA
 log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'        # log file name pattern,
                                         # can include strftime() escapes
