--- a/chef_postgres/templates/postgresql_conf.erb
+++ b/chef_postgres/templates/postgresql_conf.erb
@@ -36,7 +36,7 @@
 # MODULES
 #------------------------------------------------------------------------------
 
-shared_preload_libraries = 'decoderbufs'
+shared_preload_libraries = 'decoderbufs, redislog'
 
 #------------------------------------------------------------------------------
 # FILE LOCATIONS
