Remove redislog temporarily

--- a/chef_postgres/templates/postgresql_conf.erb
+++ b/chef_postgres/templates/postgresql_conf.erb
@@ -36,7 +36,8 @@
 # MODULES
 #------------------------------------------------------------------------------
 
-shared_preload_libraries = 'decoderbufs, redislog'
+# shared_preload_libraries = 'decoderbufs, redislog'
+shared_preload_libraries = 'decoderbufs'
 
 #------------------------------------------------------------------------------
 # FILE LOCATIONS
