--- a/chef_postgres/templates/postgresql_conf.erb
+++ b/chef_postgres/templates/postgresql_conf.erb
@@ -574,7 +574,7 @@ log_autovacuum_min_duration = 0 ### default -1 # -1 disables, 0 logs all actions
 #default_transaction_read_only = off
 #default_transaction_deferrable = off
 #session_replication_role = 'origin'
-#statement_timeout = 0                  # in milliseconds, 0 is disabled
+statement_timeout = 900000                  # in milliseconds, 0 is disabled
 #lock_timeout = 0                       # in milliseconds, 0 is disabled
 #idle_in_transaction_session_timeout = 0                # in milliseconds, 0 is disabled
 #vacuum_freeze_min_age = 50000000
@@ -625,6 +625,7 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 #deadlock_timeout = 1s
+deadlock_timeout = 5s # to avoid some deadlocking due to a slightly slower query without compromising speed too much
 #max_locks_per_transaction = 64         # min 10
                                         # (change requires restart)
 #max_pred_locks_per_transaction = 64    # min 10
