--- a/chef_postgres/templates/postgresql_conf.erb
+++ b/chef_postgres/templates/postgresql_conf.erb
@@ -37,12 +37,12 @@
 #------------------------------------------------------------------------------
 
 <% unless @config[:libs][:shared].empty? 
-     shared = @config[:libs][:shared].is_a(Array) ? @config[:libs][:shared].join(",") : @config[:libs][:shared] %>
+     shared = @config[:libs][:shared].is_a?(Array) ? @config[:libs][:shared].join(",") : @config[:libs][:shared] %>
 shared_preload_libraries = '<%= shared %>'
 <% end %>
 
 <% unless @config[:libs][:redislog_hosts].empty? 
-     redislog_hosts =  @config[:libs][:redislog_hosts].is_a(Array) ? @config[:libs][:redislog_hosts].join(",") : @config[:libs][:redislog_hosts] %>
+     redislog_hosts =  @config[:libs][:redislog_hosts].is_a?(Array) ? @config[:libs][:redislog_hosts].join(",") : @config[:libs][:redislog_hosts] %>
 redislog.hosts = '<%= @config[:libs][:redislog_hosts] %>'
 <% end %>
 
